--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <!-- Custom styles for this template -->
   <link href="css/half-slider.css" rel="stylesheet">
-   <link href="css/half-slider.css" rel="stylesheet">
+  <link href="css/header.css" rel="stylesheet">
   
 </head>
 
@@ -52,7 +52,7 @@
   <header>
     <div class="carousel-item active"  style="background-image: url('/img/bg-01.jpg')">
       
-      <div class="carousel-caption d-none d-md-block">
+      <div class="header">
         <h3>First Slide</h3>
         <p>This is a description for the first slide.</p>
       </div>
