--- a/contato/contato.html
+++ b/contato/contato.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-<form name="contactform" method="post" action="php/send_form_email.php">
+<form name="contactform" method="post" action="../php/send_form_email.php">
 <table width="450px">
 <tr>
  <td valign="top">
