--- a/contato/contato.html
+++ b/contato/contato.html
@@ -109,7 +109,7 @@
           </tr>
           <tr>
             <td colspan="2" style="text-align:center">
-              <input type="submit" value="Submit">   
+              <input type="submit" value="Enviar">   
             </td>
           </tr>
         </table>
