--- a/contato/contato.html
+++ b/contato/contato.html
@@ -29,19 +29,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../sobre/sobre.html">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../servicos/servicos.html">Serviços</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="contato/contato.html">Contato
               <span class="sr-only">(current)</span>
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contato/contato.html">Contato</a>
           </li>
         </ul>
       </div>
@@ -63,8 +63,7 @@
   <section class="py-5">
     <div class="container">
       <h1>Entre em Contato</h1>
-      
-      
+
       <form name="contactform" method="post" action="../php/send_form_email.php">
         <table width="450px">
           <tr>
