--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -8,14 +8,14 @@
   <meta name="description" content="">
   <meta name="author" content="">
   
-  <title>David Ferreira</title>
+  <title>Serviços</title>
   
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Custom styles for this template -->
-  <link href="css/half-slider.css" rel="stylesheet">
-  <link href="css/header.css" rel="stylesheet">
+  <link href="../css/half-slider.css" rel="stylesheet">
+  <link href="../css/header.css" rel="stylesheet">
   
 </head>
 
@@ -30,19 +30,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../sobre/sobre.html">Sobre </a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="servicos/servicos.html">Serviços
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sobre/sobre.html">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="servicos/servicos.html">Serviços</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contato/contato.html">Contato</a>
+            <a class="nav-link" href="../contato/contato.html">Contato</a>
           </li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
   </nav>
   
   <header>
-    <div class="carousel-item active"  style="background-image: url('img/bg-01.jpg')">
+    <div class="carousel-item active"  style="background-image: url('../img/bg-01.jpg')">
       
       <div class="header">
         <h3>Front-end Developer</h3>
