ajuste redes sociais

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -52,8 +52,8 @@
     <div class="carousel-item active"  style="background-image: url('../img/bg-01.jpg')">
       
       <div class="header">
-        <h3>Front-end Developer</h3>
-        <p>This is a description for the first slide.</p>
+        <h3>Contato</h3>
+        <p>Para mais informações entre em contato.</p>
       </div>
       
     </div>
