--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -53,7 +53,7 @@
     <div class="carousel-item active"  style="background-image: url('../img/bg-01.jpg')">
       
       <div class="header">
-        <h3>Front-end Developer</h3>
+        <h3>Serviços</h3>
         <p>This is a description for the first slide.</p>
       </div>
       
