--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -53,8 +53,8 @@
     <div class="carousel-item active"  style="background-image: url('../img/bg-01.jpg')">
       
       <div class="header">
-        <h3>Front-end Developer</h3>
-        <p>This is a description for the first slide.</p>
+        <h3>Sobre</h3>
+        <p>Um pouco de quem sou e o que faço.</p>
       </div>
       
     </div>
