projeto fun-weather ajuste footer

--- a/projetos/fun-weather/index.html
+++ b/projetos/fun-weather/index.html
@@ -574,7 +574,7 @@
 								
 							</div>
 							<!-- /.navbar-collapse -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<div class="navbar-collapse" id="bs-example-navbar-collapse-1">
 								
 								<div>
 									<ul class="nav navbar-nav">
