--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="assets/css/responsive.css">
 
-        <title>David Sousa</title>
+        <title>David Sousa.</title>
         
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
     </head>
