adjust social media and message welcome

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 	
-	<title>David Sousa.</title>
+	<title>@Davidfdesousa_</title>
 	
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
+	<link rel="icon" type="image/png" href="favicon.png">
 	
 	<!-- Start of HubSpot Embed Code -->
 	<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/9215046.js"></script>
@@ -76,16 +76,16 @@
 				<div class="row align-items-center">
 					<div class="col-lg-6 col-md-12">
 						<div class="banner-content">
-							<h5>Olá! Eu sou</h5>
+							<h5>Hello there!</h5>
 							<h1>David Ferreira</h1>
 							<span>Desenvolvedor Front-end / Mobile</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+							<p> Pagina em Constução, me siga nas redes sociais :)</p>
 							
 							<div class="social">
 								<ul>
-									<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-									<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/davidfdesousa/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+									<li><a href="https://twitter.com/davidfdesousa_" target="_blank"><i class="fab fa-twitter"></i></a></li>
+									<li><a href="https://github.com/Davidfdesousa" target="_blank"><i class="fab fa-github-square"></i></a></li>
 									
 								</ul>
 							</div>
