adjust script mailchimp

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+
+	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3430db0ead52ffcbdd31d56ad/43b9ecb23f24772f64447a40c.js");</script>
 	
 	<!-- Start of HubSpot Embed Code -->
 	<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/9215046.js"></script>
@@ -94,7 +96,7 @@
 						<div class="banner-content">
 							<h5>Hello there!</h5>
 							<h1>David Ferreira</h1>
-							<span>Desenvolvedor Front-end / Mobile</span>
+							<span>Desenvolvedor Front-end UI / Mobile</span>
 							<p> Pagina em Constução, me siga nas redes sociais :)</p>
 							
 							<div class="social">
